package patterns.structural.decorator;

public interface AbstractTostFactory {
   public Tost tostYap();
    public void icindekileriYazdir(Tost tost);
}
