package patterns.structural.decorator;

public class Domates extends Malzeme{

	public Domates(Tost tostMalzemeleri, String name, int price) {
		super(tostMalzemeleri, price, name);
	}
}
