package patterns.structural.decorator;

public class Ketcap extends Malzeme{

	public Ketcap(Tost tostMalzemeleri, String name, int price) {
		super(tostMalzemeleri, price, name);
	}
}
