package patterns.structural.decorator;

public class Peynir extends Malzeme{

	public Peynir(Tost tostMalzemeleri, String name, int price) {
		super(tostMalzemeleri, price, name);
	}
}
