package patterns.structural.decorator;
public class Sucuk extends Malzeme{

	public Sucuk(Tost tostMalzemeleri, String name, int price) {
		super(tostMalzemeleri, price, name);
	}
}
